# bwataout

./: .Xmodmap  .flake8  .gitattributes  .gitignore  Aptfile  Cargo.toml  LICENSE  NOTES  README.md  README.rst  TODO  TOOD  bootstrap.sh  caps-is-escape  conf.yml  configs.yml  conky.conf  gitconfig  gitexcludes  i3  install.py  install.sh  litecli.ini  ncmpcpp  programs.yml  pyproject.toml  requirements.txt  screenrc  sway  tint2rc  tmux.conf  ui.py  vim  vimconf.cfg  vimrc  xinitrc  xkb-symbols-dmerej  zshrc
after/ftplugin/: cmake_mysnippets.vim  python_mysnippets.vim  tex_mysnippets.vim
after/plugin/: abolish.vim
bwataout/: ics_to_markdown.py  install.py  programs.yml
configs/: conky.conf  editorconfig  gdbinit  kakrc  kitty.conf  mpd.conf  ncdu.conf  ncmpcpp  starship.toml  sway  termite  tig  tint2rc  tmux.conf  xfce4-terminalrc  xinitrc  youtube-dl  zshrc
configs/git/: attributes  config  excludes
configs/i3/: config  status
configs/kak-lsp/: kak-lsp.toml
configs/kakoune/: kakrc
configs/kitty/: kitty.conf  theme.conf
configs/konsole/: Work.profile
configs/lazygit/: config.yml
configs/lf/: lfrc  pv.sh
configs/mpv/: mpv.conf
configs/skyspell/: global.toml
configs/sway/: config  custom.xkb
configs/vim/: vimrc
configs/yazi/: keymap.toml  yazi.toml
contrib/: prompt_ctaf
dm-tools/: Cargo.toml
dm-tools/src/: app.rs  cmd.rs  commands.rs  db.rs  lib.rs  list_helpers.rs  mru_files.kak  mru_files.rs  storage.rs  storage_manager.rs  working_dirs.kak  working_dirs.rs
ftplugin/: go.vim  json.vim  python.vim  rst.vim  tex.vim
i3/: config  status
konsole/: WhiteOnBlack.colorscheme  konsolerc
mpv/: input.conf  mpv.conf
openbox/: autostart  lxde-rc.xml  menu.xml  rc.xml
patches/: README
patches/taglist/: 0001-taglist-remove-boring-message.patch
patches/vimbuddy/: 0001-Fix-annoying-invalid-expression-error.patch
plugin/: py_alternate.vim  run_pytest.vim
python/: alternate.py  run_pytest.py
python/test/: test_alternate.py  test_run_pytest.py
ritoz/: Cargo.toml
rust/: cwd-history.rs  uniq-hist-sort.rs
share/spell/: fr.add
src/: db.rs  ikv.rs  lib.rs  mru_files.kak  working_dirs.kak
src/ikv/: tests.rs
vim/: TODO  filetype.vim  get-vimconf.py  gvimrc  vim_wrapper.py  vimrc
vim/ftdetect/: markdown.vim  (+1 more)
vscode/: README.md
(+46 files in other folders)
