[package]
authors = ["Dimitri Merejkowsky <dimitri.merejkowsky@tanker.io>"]
edition = "2021"
name = "bwataout"
version = "0.1.0"

[dependencies]
anyhow = "1.0.31"
clap = { version = "3.0.0", features = ["derive"] }
clipboard = "0.5.0"
directories = "4.0"
rusqlite = "0.26.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
tempdir = "0.3.7"
