[package]
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
edition = "2021"
name = "bwataout"
version = "0.1.0"

[dependencies]
anyhow = "1.0.52"
clap = { version = "4.0.0", features = ["derive"] }
arboard = "3.2.0"
directories = "5.0"
rusqlite = "0.31"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

[dev-dependencies]
temp-dir = "0.1"
