[tool.poetry]
name = "bwataout"
version = "0.1.0"
description = "My personal toolbox"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.16.1"
cli-ui = "^0.11.0"
"ruamel.yaml" = "^0.16.12"
tomlkit = "^0.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bwataout-install = "bwataout.install:main"
