[tool.poetry]
name = "bwataout"
version = "0.1.0"
description = "My personal toolbox"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
cli-ui = "^0.11.0"
"ruamel.yaml" = "^0.17"
tomlkit = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
black = "^22.3"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bwataout-install = "bwataout.install:main"
